# erbpq

./: .gitignore  README.md  pyproject.toml
erbpq/: __init__.py
erbpq/gui/: erbpq.py  navigatedWindow.py  tocWidget.py
erbpq/utils/: epubParser.py
